--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer-core": "^21.0.0",
-    "@sparticuz/chromium": "^121.0.0"
+    "@sparticuz/chromium": "^121.0.0",
+    "express": "^4.21.2",
+    "puppeteer-core": "^21.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
