--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "web-scraper",
   "version": "1.0.0",
-  "description": "Web scraper tool with local and Vercel deployment support",
+  "description": "Web scraper tool",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "vercel dev"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sparticuz/chromium": "^121.0.0",
-    "express": "^4.21.2",
-    "puppeteer-core": "^21.11.0"
+    "express": "^4.18.2",
+    "puppeteer": "^21.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
